--- a/iMessage-Framework-Sampler/DespicableMe-Stickers/Info.plist
+++ b/iMessage-Framework-Sampler/DespicableMe-Stickers/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>DespicableMe-Stickers</string>
+	<string>Minions</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
